input-sys/src/gen.rs

extern "C" {
    /**
 * @ingroup event
 *
 * Return the device event that is this input event. If the event type does
 * not match the device event types, this function returns NULL.
 *
 * The inverse of this function is
 * libinput_event_device_notify_get_base_event().
 *
 * @return A device event, or NULL for other events
 */
    pub fn libinput_event_get_device_notify_event(event: *mut libinput_event)
     -> *mut libinput_event_device_notify;
}
extern "C" {
    /**
 * @ingroup event
 *
 * @return The generic libinput_event of this event
 */
    pub fn libinput_event_device_notify_get_base_event(event:
                                                           *mut libinput_event_device_notify)
     -> *mut libinput_event;
}
extern "C" {
    /**
 * @ingroup event_keyboard
 *
 * @return The event time for this event
 */
    pub fn libinput_event_keyboard_get_time(event:
                                                *mut libinput_event_keyboard)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_keyboard
 *
 * @return The event time for this event in microseconds
 */
    pub fn libinput_event_keyboard_get_time_usec(event:
                                                     *mut libinput_event_keyboard)
     -> u64;
}
extern "C" {
    /**
 * @ingroup event_keyboard
 *
 * @return The keycode that triggered this key event
 */
    pub fn libinput_event_keyboard_get_key(event:
                                               *mut libinput_event_keyboard)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_keyboard
 *
 * @return The state change of the key
 */
    pub fn libinput_event_keyboard_get_key_state(event:
                                                     *mut libinput_event_keyboard)
     -> libinput_key_state;
}
extern "C" {
    /**
 * @ingroup event_keyboard
 *
 * @return The generic libinput_event of this event
 */
    pub fn libinput_event_keyboard_get_base_event(event:
                                                      *mut libinput_event_keyboard)
     -> *mut libinput_event;
}
extern "C" {
    /**
 * @ingroup event_keyboard
 *
 * For the key of a @ref LIBINPUT_EVENT_KEYBOARD_KEY event, return the total number
 * of keys pressed on all devices on the associated seat after the event was
 * triggered.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_KEYBOARD_KEY. For other events, this function returns 0.
 *
 * @return The seat wide pressed key count for the key of this event
 */
    pub fn libinput_event_keyboard_get_seat_key_count(event:
                                                          *mut libinput_event_keyboard)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * @return The event time for this event
 */
    pub fn libinput_event_pointer_get_time(event: *mut libinput_event_pointer)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * @return The event time for this event in microseconds
 */
    pub fn libinput_event_pointer_get_time_usec(event:
                                                    *mut libinput_event_pointer)
     -> u64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the delta between the last event and the current event. For pointer
 * events that are not of type @ref LIBINPUT_EVENT_POINTER_MOTION, this
 * function returns 0.
 *
 * If a device employs pointer acceleration, the delta returned by this
 * function is the accelerated delta.
 *
 * Relative motion deltas are to be interpreted as pixel movement of a
 * standardized mouse. See @ref motion_normalization for more details.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION.
 *
 * @return The relative x movement since the last event
 */
    pub fn libinput_event_pointer_get_dx(event: *mut libinput_event_pointer)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the delta between the last event and the current event. For pointer
 * events that are not of type @ref LIBINPUT_EVENT_POINTER_MOTION, this
 * function returns 0.
 *
 * If a device employs pointer acceleration, the delta returned by this
 * function is the accelerated delta.
 *
 * Relative motion deltas are to be interpreted as pixel movement of a
 * standardized mouse. See @ref motion_normalization for more details.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION.
 *
 * @return The relative y movement since the last event
 */
    pub fn libinput_event_pointer_get_dy(event: *mut libinput_event_pointer)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the relative delta of the unaccelerated motion vector of the
 * current event. For pointer events that are not of type @ref
 * LIBINPUT_EVENT_POINTER_MOTION, this function returns 0.
 *
 * Relative unaccelerated motion deltas are raw device coordinates.
 * Note that these coordinates are subject to the device's native
 * resolution. Touchpad coordinates represent raw device coordinates in the
 * X resolution of the touchpad. See @ref motion_normalization for more
 * details.
 *
 * Any rotation applied to the device also applies to unaccelerated motion
 * (see libinput_device_config_rotation_set_angle()).
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION.
 *
 * @return The unaccelerated relative x movement since the last event
 */
    pub fn libinput_event_pointer_get_dx_unaccelerated(event:
                                                           *mut libinput_event_pointer)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the relative delta of the unaccelerated motion vector of the
 * current event. For pointer events that are not of type @ref
 * LIBINPUT_EVENT_POINTER_MOTION, this function returns 0.
 *
 * Relative unaccelerated motion deltas are raw device coordinates.
 * Note that these coordinates are subject to the device's native
 * resolution. Touchpad coordinates represent raw device coordinates in the
 * X resolution of the touchpad. See @ref motion_normalization for more
 * details.
 *
 * Any rotation applied to the device also applies to unaccelerated motion
 * (see libinput_device_config_rotation_set_angle()).
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION.
 *
 * @return The unaccelerated relative y movement since the last event
 */
    pub fn libinput_event_pointer_get_dy_unaccelerated(event:
                                                           *mut libinput_event_pointer)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the current absolute x coordinate of the pointer event, in mm from
 * the top left corner of the device. To get the corresponding output screen
 * coordinate, use libinput_event_pointer_get_absolute_x_transformed().
 *
 * For pointer events that are not of type
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE.
 *
 * @return The current absolute x coordinate
 */
    pub fn libinput_event_pointer_get_absolute_x(event:
                                                     *mut libinput_event_pointer)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the current absolute y coordinate of the pointer event, in mm from
 * the top left corner of the device. To get the corresponding output screen
 * coordinate, use libinput_event_pointer_get_absolute_y_transformed().
 *
 * For pointer events that are not of type
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE.
 *
 * @return The current absolute y coordinate
 */
    pub fn libinput_event_pointer_get_absolute_y(event:
                                                     *mut libinput_event_pointer)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the current absolute x coordinate of the pointer event, transformed to
 * screen coordinates.
 *
 * For pointer events that are not of type
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, the return value of this
 * function is undefined.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE.
 *
 * @param event The libinput pointer event
 * @param width The current output screen width
 * @return The current absolute x coordinate transformed to a screen coordinate
 */
    pub fn libinput_event_pointer_get_absolute_x_transformed(event:
                                                                 *mut libinput_event_pointer,
                                                             width: u32)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the current absolute y coordinate of the pointer event, transformed to
 * screen coordinates.
 *
 * For pointer events that are not of type
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, the return value of this function is
 * undefined.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE.
 *
 * @param event The libinput pointer event
 * @param height The current output screen height
 * @return The current absolute y coordinate transformed to a screen coordinate
 */
    pub fn libinput_event_pointer_get_absolute_y_transformed(event:
                                                                 *mut libinput_event_pointer,
                                                             height: u32)
     -> f64;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the button that triggered this event.
 * For pointer events that are not of type @ref
 * LIBINPUT_EVENT_POINTER_BUTTON, this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_BUTTON.
 *
 * @return The button triggering this event
 */
    pub fn libinput_event_pointer_get_button(event:
                                                 *mut libinput_event_pointer)
     -> u32;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * Return the button state that triggered this event.
 * For pointer events that are not of type @ref
 * LIBINPUT_EVENT_POINTER_BUTTON, this function returns 0.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_BUTTON.
 *
 * @return The button state triggering this event
 */
    pub fn libinput_event_pointer_get_button_state(event:
                                                       *mut libinput_event_pointer)
     -> libinput_button_state;
}
extern "C" {
    /**
 * @ingroup event_pointer
 *
 * For the button of a @ref LIBINPUT_EVENT_POINTER_BUTTON event, return the
 * total number of buttons pressed on all devices on the associated seat
 * after the event was triggered.
 *
 * @note It is an application bug to call this function for events other than
 * @ref LIBINPUT_EVENT_POINTER_BUTTON. For other events, this function
 * returns 0.
 *
 * @return The seat wide pressed button count for the key of this event
 */
    pub fn libinput_event_pointer_get_seat_button_count(event:
                                                            *mut libinput_event_pointer)
     -> u32;
}
